# uptime-rs

./: .env-sample  .gitignore  Cargo.toml  README.md
.cargo/: config
src/: main.rs
