[package]
name = "uptime"
version = "0.1.0"
authors = ["Alex", "Jenny"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
tide = "0.8.1"
sqlx = { version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.13"
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
thiserror = "1.0.20"
http-service = "0.5.0"
futures = "0.3.5"
http-types = "1.3.1"
anyhow = "1.0.31"
rand = "0.7.3"

[dev-dependencies]
http-service-mock = "0.5.0"
assert-json-diff = "1.0.3"
